--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Admission Chatbox</title>
+    <title></title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
         }
 
         .chat-header {
-            background: linear-gradient(135deg, #365f32 0%, #72df7b  100%);
+            background: linear-gradient(135deg, #2C3E50 0%, #4CA1AF 100%);
             color: #fff;
             padding: 25px;
             display: flex;
@@ -91,7 +91,7 @@
         }
 
         .user-message {
-            background-color: #4CAF50;
+            background-color: gray;
             color: #fff;
             align-self: flex-end;
             border-radius: 20px 20px 0 20px;
@@ -135,7 +135,7 @@
         }
 
         .send-button {
-            background-color: #4CAF50;
+            background-color: gray;
             border: none;
             padding: 10px;
             border-radius: 50%;
@@ -146,7 +146,7 @@
         }
 
         .send-button:hover {
-            background-color: #45a049;
+            background-color: white;
         }
 
         .send-button img {
@@ -165,9 +165,9 @@
 <body>
     <div class="chatbox">
         <div class="chat-header">
-            <img src="https://i.ibb.co/HHQhpNM/mydoc.png" alt="University Logo" class="logo">
+            <img src="https://i.ibb.co/HHQhpNM/mydoc.png" alt="DR Logo" class="logo">
             <div class="chat-info">
-                <div class="chat-title">Dr. CareBot</div>
+                <div class="chat-title">Skincare Consultation</div>
                 <div class="status-container">
                     <div class="status">Available</div>
                 </div>
@@ -210,7 +210,7 @@ async function sendMessage() {
         scrollToBottom();
         try {
 
-            const response = await fetch('http://localhost:8000/my/doc/chat', {
+            const response = await fetch('http://localhost:8000/skincare/consult/chat', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
